--- a/Examples/BVSDKDemo/BVSDKDemo/Curations/Resources/CurationsPhotoMapViewController.xib
+++ b/Examples/BVSDKDemo/BVSDKDemo/Curations/Resources/CurationsPhotoMapViewController.xib
@@ -1,10 +1,9 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
-        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CurationsPhotoMapViewController" customModule="BVSDKDemo" customModuleProvider="target">
@@ -17,17 +16,17 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="22F-eu-wJq">
-                    <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                     <connections>
                         <outlet property="delegate" destination="-1" id="df0-6o-Ukk"/>
                     </connections>
                 </mapView>
                 <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vpw-b1-rqT">
-                    <rect key="frame" x="513" y="514" width="75" height="75"/>
+                    <rect key="frame" x="326.5" y="809.5" width="75" height="75"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="Vpw-b1-rqT" secondAttribute="height" multiplier="1:1" id="7XH-fm-zox"/>
                     </constraints>
@@ -36,14 +35,14 @@
                     </connections>
                 </button>
                 <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="minusBtn.png" translatesAutoresizingMaskIntoConstraints="NO" id="Ylz-lc-9ye">
-                    <rect key="frame" x="525" y="526" width="50" height="50"/>
+                    <rect key="frame" x="339" y="822" width="50" height="50"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="Ylz-lc-9ye" secondAttribute="height" multiplier="1:1" id="hH2-xe-kXU"/>
                         <constraint firstAttribute="height" constant="50" id="v2S-60-csm"/>
                     </constraints>
                 </imageView>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="22F-eu-wJq" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" id="9aV-U9-wdZ"/>
                 <constraint firstItem="Ylz-lc-9ye" firstAttribute="leading" secondItem="22F-eu-wJq" secondAttribute="trailing" constant="-75" id="Mgp-mX-yap"/>
@@ -63,6 +62,7 @@
                     <exclude reference="zLF-gZ-glA"/>
                 </mask>
             </variation>
+            <point key="canvasLocation" x="-106" y="52"/>
         </view>
     </objects>
     <resources>
