--- a/Examples/BVSDKDemo/BVSDKDemo/Curations/View Controllers/Lightbox Demo/Cells/CurationsFeedItemDetailCell.xib
+++ b/Examples/BVSDKDemo/BVSDKDemo/Curations/View Controllers/Lightbox Demo/Cells/CurationsFeedItemDetailCell.xib
@@ -1,56 +1,56 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CurationsFeedItemDetailCell" customModule="Curations" customModuleProvider="target"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CurationsFeedItemDetailCell" customModule="BVSDKDemo" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="CurationsFeedItemDetailCell" rowHeight="193" id="KGk-i7-Jjw" customClass="CurationsFeedItemDetailCell" customModule="Curations" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="CurationsFeedItemDetailCell" rowHeight="193" id="KGk-i7-Jjw" customClass="CurationsFeedItemDetailCell" customModule="BVSDKDemo" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="193"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="192.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="193"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Author" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f3I-2X-ULR">
-                        <rect key="frame" x="62" y="10" width="250" height="18"/>
+                        <rect key="frame" x="70" y="13" width="234" height="18"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Post Time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R19-VW-mXT">
-                        <rect key="frame" x="62" y="30" width="250" height="16"/>
+                        <rect key="frame" x="70" y="33" width="234" height="16"/>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2sO-6r-3H0">
-                        <rect key="frame" x="8" y="8" width="46" height="46"/>
+                        <rect key="frame" x="16" y="11" width="46" height="46"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="46" id="umS-Q5-bbd"/>
                             <constraint firstAttribute="height" constant="46" id="wmQ-yK-Uwx"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="11" translatesAutoresizingMaskIntoConstraints="NO" id="IlX-yP-xWP">
-                        <rect key="frame" x="8" y="57" width="304" height="75"/>
+                        <rect key="frame" x="16" y="60" width="288" height="75"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="75" id="ME4-5V-QJE"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Share" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F6c-nN-yA7">
-                        <rect key="frame" x="8" y="151" width="35" height="16"/>
+                        <rect key="frame" x="16" y="148" width="35" height="16"/>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KFE-z6-X2x">
-                        <rect key="frame" x="42" y="135" width="44" height="44"/>
+                        <rect key="frame" x="50" y="132" width="44" height="44"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="44" id="0EB-RT-PFN"/>
                             <constraint firstAttribute="width" constant="44" id="NN9-uA-6mo"/>
@@ -61,7 +61,7 @@
                         </connections>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="c4n-CQ-nOx">
-                        <rect key="frame" x="127" y="135" width="44" height="44"/>
+                        <rect key="frame" x="135" y="132" width="44" height="44"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="44" id="MXd-dy-7LY"/>
                             <constraint firstAttribute="width" constant="44" id="qjr-KP-AeW"/>
@@ -72,7 +72,7 @@
                         </connections>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BoZ-xO-aEq">
-                        <rect key="frame" x="190" y="136" width="44" height="44"/>
+                        <rect key="frame" x="182" y="133" width="44" height="44"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="44" id="HaM-pz-WDe"/>
                             <constraint firstAttribute="height" constant="44" id="lcp-f5-Qtz"/>
@@ -83,7 +83,7 @@
                         </connections>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Nd-Jr-5hn">
-                        <rect key="frame" x="233" y="136" width="44" height="44"/>
+                        <rect key="frame" x="225" y="133" width="44" height="44"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="44" id="DK5-ld-FiD"/>
                             <constraint firstAttribute="width" constant="44" id="SdR-Vk-QYh"/>
@@ -94,7 +94,7 @@
                         </connections>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dGO-uZ-Nm1">
-                        <rect key="frame" x="275" y="136" width="44" height="44"/>
+                        <rect key="frame" x="267" y="133" width="44" height="44"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="44" id="1v8-Vq-JAT"/>
                             <constraint firstAttribute="width" constant="44" id="gp9-zn-kKg"/>
@@ -105,7 +105,7 @@
                         </connections>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8AN-jA-4o5">
-                        <rect key="frame" x="81" y="135" width="44" height="44"/>
+                        <rect key="frame" x="89" y="132" width="44" height="44"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="44" id="drk-l3-IGa"/>
                             <constraint firstAttribute="width" constant="44" id="uxV-nB-ECn"/>
@@ -116,7 +116,7 @@
                         </connections>
                     </button>
                 </subviews>
-                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 <constraints>
                     <constraint firstAttribute="bottomMargin" secondItem="dGO-uZ-Nm1" secondAttribute="bottom" constant="5" id="2Ew-fF-fy4"/>
                     <constraint firstAttribute="leadingMargin" secondItem="IlX-yP-xWP" secondAttribute="leading" id="AYx-hg-vyD"/>
